build: migrate to tsdown

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,10 @@
     "codecov",
     "esbuild",
     "lcov",
+    "noopener",
     "pnpm",
+    "tsdown",
+    "unrs",
     "vite",
     "vitest"
   ],
