--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -1,15 +1,16 @@
-name: CI
+name: autofix.ci # must named autofix.ci
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+  pull_request: {}
+
+permissions:
+  contents: read
 
 jobs:
-  check:
+  autofix:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -20,7 +21,8 @@ jobs:
           cache: pnpm
 
       - run: pnpm install --frozen-lockfile
-      - run: pnpm run lint
-      - run: pnpm run typecheck
-      - run: pnpm run test
-      - run: pnpm run build
+      - run: pnpm run lint --fix
+
+      - uses: autofix-ci/action@v1.3.1
+        with:
+          commit-message: 'chore: autofix by ci'
