--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tinysaver",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.6.5",
+  "packageManager": "pnpm@10.12.4",
   "description": "Modern replacement of file-saver.js.",
   "keywords": [
     "download",
@@ -23,19 +23,19 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "types": "./dist/index.d.mts",
-      "default": "./dist/index.mjs"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
-  "main": "./dist/index.mjs",
-  "types": "./dist/index.d.mts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --watch",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "lint": "eslint",
     "prepare": "husky",
     "prepublishOnly": "pnpm run build",
@@ -46,24 +46,22 @@
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
-  "dependencies": {
-    "@ntnyq/utils": "^0.6.2"
-  },
   "devDependencies": {
-    "@ntnyq/eslint-config": "^4.0.2",
-    "@ntnyq/prettier-config": "^2.0.0",
-    "@types/node": "^22.13.13",
-    "bumpp": "^10.1.0",
-    "eslint": "^9.23.0",
+    "@ntnyq/eslint-config": "^5.0.0",
+    "@ntnyq/prettier-config": "^3.0.1",
+    "@ntnyq/utils": "^0.8.0",
+    "@types/node": "^24.0.12",
+    "bumpp": "^10.2.0",
+    "eslint": "^9.30.1",
     "husky": "^9.1.7",
     "nano-staged": "^0.8.0",
-    "npm-run-all2": "^7.0.2",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2",
-    "unbuild": "^3.5.0",
-    "vitest": "^3.0.9"
+    "npm-run-all2": "^8.0.4",
+    "prettier": "^3.6.2",
+    "tsdown": "^0.12.9",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   },
   "nano-staged": {
-    "*.{js,ts,mjs,cjs,md,yml,yaml,json}": "eslint --fix"
+    "*.{js,ts,mjs,cjs,md,yml,yaml,toml,json}": "eslint --fix"
   }
 }
