--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tinysaver",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.22.0",
+  "packageManager": "pnpm@10.28.0",
   "description": "Modern replacement of file-saver.js.",
   "keywords": [
     "download",
@@ -46,20 +46,20 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@ntnyq/eslint-config": "^5.8.0",
+    "@ntnyq/eslint-config": "^5.9.0",
     "@ntnyq/prettier-config": "^3.0.1",
-    "@ntnyq/tsconfig": "^3.0.0",
-    "@ntnyq/utils": "^0.9.2",
-    "@types/node": "^24.10.1",
-    "bumpp": "^10.3.1",
-    "eslint": "^9.39.1",
+    "@ntnyq/tsconfig": "^3.1.0",
+    "@ntnyq/utils": "^0.11.0",
+    "bumpp": "^10.3.2",
+    "eslint": "^9.39.2",
     "husky": "^9.1.7",
+    "jsdom": "^27.4.0",
     "nano-staged": "^0.9.0",
     "npm-run-all2": "^8.0.4",
-    "prettier": "^3.6.2",
-    "tsdown": "^0.16.5",
+    "prettier": "^3.7.4",
+    "tsdown": "^0.19.0",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.10"
+    "vitest": "^4.0.16"
   },
   "nano-staged": {
     "*.{js,ts,mjs,cjs,md,yml,yaml,toml,json}": "eslint --fix"
