--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "tinysaver",
-  "type": "module",
   "version": "0.1.0",
-  "packageManager": "pnpm@10.28.0",
   "description": "Modern replacement of file-saver.js.",
   "keywords": [
     "download",
@@ -10,16 +8,23 @@
     "file-saver",
     "save-as"
   ],
+  "homepage": "https://github.com/ntnyq/tinysaver#readme",
+  "bugs": {
+    "url": "https://github.com/ntnyq/tinysaver/issues"
+  },
   "license": "MIT",
   "author": {
     "name": "ntnyq",
     "email": "ntnyq13@gmail.com"
   },
-  "homepage": "https://github.com/ntnyq/tinysaver#readme",
   "repository": "ntnyq/tinysaver",
-  "bugs": {
-    "url": "https://github.com/ntnyq/tinysaver/issues"
-  },
+  "files": [
+    "dist"
+  ],
+  "type": "module",
+  "sideEffects": false,
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
@@ -27,46 +32,43 @@
       "default": "./dist/index.js"
     }
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "sideEffects": false,
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown --watch",
-    "lint": "eslint",
+    "format": "oxfmt",
+    "format:check": "oxfmt --check",
+    "lint": "oxlint",
     "prepare": "husky",
     "prepublishOnly": "pnpm run build",
     "release": "run-s release:check release:version",
     "release:check": "run-s lint typecheck test",
-    "release:check:full": "run-s lint typecheck test test:e2e",
+    "release:check:full": "run-s format:check lint typecheck test test:e2e",
     "release:version": "bumpp",
     "test": "vitest",
     "test:e2e": "vitest --config vitest.config.e2e.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsgo --noEmit"
   },
   "devDependencies": {
-    "@ntnyq/eslint-config": "^5.9.0",
-    "@ntnyq/prettier-config": "^3.0.1",
     "@ntnyq/tsconfig": "^3.1.0",
     "@ntnyq/utils": "^0.11.0",
-    "@vitest/browser": "^4.0.17",
-    "@vitest/browser-playwright": "^4.0.17",
-    "bumpp": "^10.3.2",
-    "eslint": "^9.39.2",
+    "@typescript/native-preview": "^7.0.0-dev.20260223.1",
+    "@vitest/browser": "^4.0.18",
+    "@vitest/browser-playwright": "^4.0.18",
+    "bumpp": "^10.4.1",
     "husky": "^9.1.7",
-    "jsdom": "^27.4.0",
+    "jsdom": "^28.1.0",
     "nano-staged": "^0.9.0",
     "npm-run-all2": "^8.0.4",
-    "playwright": "^1.57.0",
-    "prettier": "^3.7.4",
-    "tsdown": "^0.19.0",
+    "oxfmt": "^0.35.0",
+    "oxlint": "^1.50.0",
+    "playwright": "^1.58.2",
+    "tsdown": "^0.20.3",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.18"
   },
   "nano-staged": {
-    "*.{js,ts,mjs,cjs,md,yml,yaml,toml,json}": "eslint --fix"
-  }
+    "*.{js,ts,mjs,tsx,}": "oxlint --fix",
+    "*": "oxfmt --no-error-on-unmatched-pattern"
+  },
+  "packageManager": "pnpm@10.30.2"
 }
